--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,40 +2,50 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home" style="max-width: 700px; margin: auto; padding: 2em; font-family: sans-serif; line-height: 1.6;">
 
   <!-- Navbar -->
-  <nav style="margin-bottom: 2em;">
+  <nav style="margin-bottom: 2em; text-align: center;">
     <a href="{{ "/" | relative_url }}" style="text-decoration: none; font-weight: bold; margin-right: 1em;">🏠 Home</a>
     <a href="{{ "/about/" | relative_url }}" style="text-decoration: none; font-weight: bold;">ℹ️ About Me</a>
   </nav>
 
   <!-- Site title + description -->
-  <header>
+  <header style="text-align: center; margin-bottom: 3em;">
     <h1>{{ site.title }}</h1>
     <p><em>{{ site.description }}</em></p>
   </header>
 
   <!-- Posts list -->
-  <section style="margin-top: 2em;">
+  <section style="margin-bottom: 3em;">
     <h2>Posts</h2>
     {% for post in site.posts %}
-      <div class="post" style="margin-bottom: 1.5em;">
-        <h3><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
-        <small>{{ post.date | date: "%b %-d, %Y" }}</small>
-        <p>{{ post.excerpt }}</p>
+      <div class="post" style="margin-bottom: 2em; padding-bottom: 1em; border-bottom: 1px solid #eee;">
+        <h3>
+          <a href="{{ post.url | relative_url }}" style="text-decoration: none; color: #333;">
+            {{ post.title }}
+          </a>
+        </h3>
+        <small style="color: #555;">{{ post.date | date: "%b %-d, %Y" }}</small>
+        {% if post.description %}
+          <p>{{ post.description }}</p>
+        {% endif %}
       </div>
     {% endfor %}
   </section>
 
-  <!-- Social links -->
-  <footer style="margin-top: 3em;">
+  <!-- Footer -->
+  <footer style="text-align: center; margin-top: 4em; padding-top: 2em; border-top: 1px solid #ddd;">
     <h3>Connect with me</h3>
     {% for network in site.minima.social_links %}
       {% assign username = site.minima.social_links[network] %}
-      <a href="https://{{ network }}.com/{{ username }}" target="_blank" style="margin-right: 1em;">
-        {{ network | capitalize }}
-      </a>
+      {% if network == "linkedin" %}
+        <a href="https://www.linkedin.com/in/{{ username }}" target="_blank" style="margin: 0 1em;">LinkedIn</a>
+      {% elsif network == "github" %}
+        <a href="https://github.com/{{ username }}" target="_blank" style="margin: 0 1em;">GitHub</a>
+      {% else %}
+        <a href="https://{{ network }}.com/{{ username }}" target="_blank" style="margin: 0 1em;">{{ network | capitalize }}</a>
+      {% endif %}
     {% endfor %}
   </footer>
 
