Update navbar links to remove emojis

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,8 @@ layout: default
 
   <!-- Navbar -->
   <nav style="margin-bottom: 2em; text-align: center;">
-    <a href="{{ "/" | relative_url }}" style="text-decoration: none; font-weight: bold; margin-right: 1em;">🏠 Home</a>
-    <a href="{{ "/about/" | relative_url }}" style="text-decoration: none; font-weight: bold;">ℹ️ About Me</a>
+    <a href="{{ "/" | relative_url }}" style="text-decoration: none; font-weight: bold; margin-right: 1em;"> Home</a>
+    <a href="{{ "/about/" | relative_url }}" style="text-decoration: none; font-weight: bold;"> About Me</a>
   </nav>
 
   <!-- Site title + description -->
