--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,12 +5,15 @@
 
 /* Homepage post titles */
 .post-link {
-  font-size: 1.6rem;
-  line-height: 1.3;
+  font-size: 1.6rem;   /* smaller, more liminal */
   font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 0.3em;
 }
 
-.post-title {
-  font-size: 2rem;
+/* Post description */
+.post-description {
+  font-size: 0.95rem;
+  color: #666;
+  margin-top: 0.4em;
 }
-
